<resources>
    <string name="Image_saved_to">Image saved to:</string>
    <string name="LOADING">Loading...</string>
    <string name="Share_App">Share App</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_perform">Press and hold (Long click) to Save the Image</string>
    <string name="ad_attribution">AD</string>
    <string name="ad_native">ca-app-pub-5201774978384503/2939880418</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animals">Animals</string>
    <string name="app_id">ca-app-pub-5201774978384503~3031318716</string>
    <string name="app_name">Drawing AR</string>
    <string name="app_open">ca-app-pub-5201774978384503/9549976677</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_video">Are you sure you want to delete this video?</string>
    <string name="banner">ca-app-pub-5201774978384503/5087987483</string>
    <string name="birds">Birds</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="camera">Camera</string>
    <string name="can_t_detect_this_image">Can not detect this image please try with another image</string>
    <string name="cancel">Cancel</string>
    <string name="canvas">Canvas</string>
    <string name="cartoon">Cartoon</string>
    <string name="category">Category</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="clike_perform">Click on Image to open it</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="company_email">mitra.ringtones@gmail.com</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="delete_file">Delete File</string>
    <string name="delete_successfully">Delete Successfully</string>
    <string name="dev_name">Mitra+Ringtones</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default_title">"Here's a message!"</string>
    <string name="dialog_ok">OK</string>
    <string name="discard">Discard</string>
    <string name="discard_msg">Are you really want to Discard without Save?</string>
    <string name="don_t_show_again">"Don't show again"</string>
    <string name="done_msg">Are you Really want to Go Back without Any Text Written?</string>
    <string name="draw">Draw</string>
    <string name="draw_tital">Draw</string>
    <string name="emoji">Emoji</string>
    <string name="empty_draw_msg">Please Draw something!!!</string>
    <string name="eraser_size">Eraser Size</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit_msg">Do you want to leave the app?</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="eyes">Eyes</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_copy_link">Copy link</string>
    <string name="fallback_menu_item_open_in_browser">Open in browser</string>
    <string name="fallback_menu_item_share_link">Share link</string>
    <string name="favorite">Favorite</string>
    <string name="feedback">Feedback</string>
    <string name="festival">Festival</string>
    <string name="finish">Finish</string>
    <string name="food">Food</string>
    <string name="fruit">Fruit</string>
    <string name="full">ca-app-pub-5201774978384503/2473432430</string>
    <string name="funny">Funny</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home_browser">Explore more from browser</string>
    <string name="home_draw">Drawing Pad</string>
    <string name="home_saved">Saved</string>
    <string name="home_start">Start</string>
    <string name="home_text">Write Text</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_saved_to">"Image saved to: "</string>
    <string name="invalid_url">Sorry, that URL is invalid.</string>
    <string name="item_view_role_description">Tab</string>
    <string name="label">Label</string>
    <string name="language">Language</string>
    <string name="laps">Laps</string>
    <string name="large_banner">ca-app-pub-5201774978384503/9931362772</string>
    <string name="later">Maybe Later</string>
    <string name="launcher">ca-app-pub-5201774978384503/4325570158</string>
    <string name="m3_ref_typeface_brand_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_brand_regular">sans-serif</string>
    <string name="m3_ref_typeface_plain_medium">sans-serif-medium</string>
    <string name="m3_ref_typeface_plain_regular">sans-serif</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="more_app">More App</string>
    <string name="no_data_found">No data found</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="not_now">NOT NOW</string>
    <string name="now">Rate Now!</string>
    <string name="permission_required">PERMISSION REQUIRED</string>
    <string name="please_take_a_moment_to_n_share_your_feedback_with_us">"Please take a moment to
 share your feedback with us."</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_msg_main">Did you enjoy our App?</string>
    <string name="rate_title">Rate Us!</string>
    <string name="settings">Settings</string>
    <string name="settings2">SETTINGS</string>
    <string name="share">Share</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="write_review">Write a Review</string>
</resources>