<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <RelativeLayout style="@style/toolbar">
            <ImageView android:id="@id/img_back_setting" style="@style/ImageBackToolbar" />
            <TextView android:text="@string/settings" style="@style/textToolbar" />
            <View android:layout_alignParentBottom="true" style="@style/dividerLine" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <RelativeLayout android:id="@id/rLang_app" style="@style/relative_setting">
                <ImageView android:id="@id/icn_lang" android:src="@drawable/ic_language_choose" style="@style/icon_setting" />
                <TextView android:text="@string/language" android:layout_toRightOf="@id/icn_lang" style="@style/text_Setting" />
                <ImageView style="@style/icon_next_setting" />
            </RelativeLayout>
            <View android:layout_marginLeft="10.0dip" android:layout_marginStart="10.0dip" style="@style/dividerLine" />
            <RelativeLayout android:id="@id/rMore_app" style="@style/relative_setting">
                <ImageView android:id="@id/icn_more" android:src="@drawable/ic_more" style="@style/icon_setting" />
                <TextView android:text="@string/more_app" android:layout_toRightOf="@id/icn_more" style="@style/text_Setting" />
                <ImageView style="@style/icon_next_setting" />
            </RelativeLayout>
            <View android:layout_marginLeft="10.0dip" android:layout_marginStart="10.0dip" style="@style/dividerLine" />
            <RelativeLayout android:id="@id/rFeedback" style="@style/relative_setting">
                <ImageView android:id="@id/icn_feedback" android:src="@drawable/ic_feedback" style="@style/icon_setting" />
                <TextView android:text="@string/feedback" android:layout_toRightOf="@id/icn_feedback" style="@style/text_Setting" />
                <ImageView style="@style/icon_next_setting" />
            </RelativeLayout>
            <View android:layout_marginLeft="10.0dip" android:layout_marginStart="10.0dip" style="@style/dividerLine" />
            <RelativeLayout android:id="@id/rShare" style="@style/relative_setting">
                <ImageView android:id="@id/icn_share" android:src="@drawable/ic_share_24" style="@style/icon_setting" />
                <TextView android:text="@string/share" android:layout_toRightOf="@id/icn_share" style="@style/text_Setting" />
                <ImageView style="@style/icon_next_setting" />
            </RelativeLayout>
            <View android:layout_marginLeft="10.0dip" android:layout_marginStart="10.0dip" style="@style/dividerLine" />
            <RelativeLayout android:id="@id/rReview" style="@style/relative_setting">
                <ImageView android:id="@id/icn_review" android:src="@drawable/ic_star_rate" style="@style/icon_setting" />
                <TextView android:text="@string/write_review" android:layout_toRightOf="@id/icn_review" style="@style/text_Setting" />
                <ImageView style="@style/icon_next_setting" />
            </RelativeLayout>
            <View android:layout_marginLeft="10.0dip" android:layout_marginStart="10.0dip" style="@style/dividerLine" />
            <RelativeLayout android:id="@id/rPrivacy_policy" style="@style/relative_setting">
                <ImageView android:id="@id/icn_privacy" android:src="@drawable/ic_privacy_policy" style="@style/icon_setting" />
                <TextView android:text="@string/privacy_policy" android:layout_toRightOf="@id/icn_privacy" style="@style/text_Setting" />
                <ImageView style="@style/icon_next_setting" />
            </RelativeLayout>
            <View android:layout_marginLeft="10.0dip" android:layout_marginStart="10.0dip" style="@style/dividerLine" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/nativeAdLyt" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/DP_200dp" android:layout_alignParentBottom="true">
        <com.myads.googlead.GoogleNativeAdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    </RelativeLayout>
</LinearLayout>