<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="right" android:orientation="vertical" android:id="@id/loutMain" android:background="@drawable/dialog_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:paddingStart="5.0dip" android:paddingEnd="5.0dip">
        <LinearLayout android:id="@id/loutClose" android:paddingTop="15.0dip" android:paddingBottom="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingStart="20.0dip" android:paddingEnd="18.0dip">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" app:tint="@color/rate_later_close" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="21.0sp" android:textStyle="bold" android:textColor="@color/rate_later_title" android:gravity="center" android:id="@id/heading" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_title" android:layout_centerInParent="true" />
            </RelativeLayout>
            <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent">
                <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/rate_later_title" android:layout_gravity="center" android:paddingTop="12.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_msg_main" />
                <TextView android:textSize="16.0sp" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/editText" android:paddingLeft="10.0dip" android:paddingTop="90.0dip" android:paddingRight="10.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/please_take_a_moment_to_n_share_your_feedback_with_us" />
                <RatingBar android:layout_gravity="center" android:id="@id/ratingBar" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="60.0dip" android:numStars="5" android:stepSize="1.0" style="@style/foodRatingBar" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_marginTop="@dimen/DP_8dp">
                    <RelativeLayout android:id="@id/share" android:background="@drawable/share_button_solid" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:foreground="?selectableItemBackground" android:layout_weight="0.5" android:layout_marginEnd="@dimen/DP_5dp">
                        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Share_App" android:layout_centerInParent="true" app:autoSizeMinTextSize="5.0sp" app:autoSizeStepGranularity="1.0sp" app:autoSizeTextType="uniform" />
                    </RelativeLayout>
                    <RelativeLayout android:id="@id/okay" android:background="@drawable/rate_button_solid" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:foreground="?selectableItemBackground" android:layout_weight="0.5" android:layout_marginStart="@dimen/DP_5dp">
                        <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="center" android:id="@id/okayText" android:paddingBottom="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/now" android:layout_centerInParent="true" app:autoSizeMinTextSize="5.0sp" app:autoSizeStepGranularity="1.0sp" app:autoSizeTextType="uniform" />
                    </RelativeLayout>
                </LinearLayout>
                <TextView android:textSize="16.0sp" android:textColor="@color/rate_later_sub" android:layout_gravity="center" android:id="@id/cancel" android:background="?selectableItemBackground" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0sp" android:layout_marginBottom="15.0sp" android:text="@string/no_thanks" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ImageView android:layout_width="140.0dip" android:layout_height="110.0dip" android:src="@drawable/rate_stars" android:layout_centerHorizontal="true" />
</RelativeLayout>