<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:id="@id/card" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="35.0dip" android:layout_marginEnd="35.0dip" app:cardBackgroundColor="@color/white" app:cardCornerRadius="8.0dip" app:cardElevation="0.0dip" app:cardPreventCornerOverlap="false" app:cardUseCompatPadding="true">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:gravity="center_vertical" android:id="@id/parentLyt1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <ImageView android:id="@id/permissionImage" android:background="@color/mainColor" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="100.0dip" android:src="@drawable/permission_icon" android:layout_alignParentTop="true" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
                <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/permissionRequired" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/permission_required" android:layout_below="@id/permissionImage" android:layout_marginStart="25.0dip" android:layout_marginEnd="25.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
                <TextView android:textSize="13.0sp" android:gravity="center_vertical" android:id="@id/permissionMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="25.0dip" android:layout_below="@id/permissionRequired" android:layout_marginStart="25.0dip" android:layout_marginEnd="25.0dip" android:layout_alignParentStart="true" android:layout_alignParentEnd="true" />
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/mainColor" android:gravity="center" android:id="@id/permissionSetting" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/settings2" android:layout_below="@id/permissionMessage" android:layout_marginEnd="25.0dip" android:layout_alignParentEnd="true" />
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/grey" android:gravity="center" android:id="@id/permissionNotNow" android:background="?selectableItemBackground" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/not_now" android:layout_below="@id/permissionMessage" android:layout_marginEnd="10.0dip" android:layout_toStartOf="@id/permissionSetting" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>